css/ucla-logon.css
/* ... */
/* line 73, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
input {
  line-height: normal;
}

/* line 83, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
input[type="checkbox"],
input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}

/* line 93, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/* line 102, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
input[type="search"] {
  -webkit-appearance: textfield;
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
}

/* line 113, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/* line 120, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
fieldset {
  border: 1px solid #c0c0c0;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}

/* line 129, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
legend {
  border: 0;
  padding: 0;
}

/* line 136, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
textarea {
  overflow: auto;
}

/* line 143, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-normalize-1.5/stylesheets/normalize/_forms.scss */
optgroup {
  font-weight: bold;
}

/* line 79, ../_scss/_ucla-vars.scss */
body {
  font-size: 100%;
}

/*
@font-face {
	font-family: '../fonts/ProximaNova';src: url('../fonts/ProximaNova-Light.eot');src: url('../fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'),url('../fonts/ProximaNova-Light.woff') format('woff'),url('../fonts/ProximaNova-Light.ttf') format('truetype');
	font-weight: 300;
	font-style: normal;
}
*/
@font-face {
  font-family: '../fonts/ProximaNova';
  src: url("../fonts/ProximaNova-Regular.eot");
  src: url("../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
}
/* line 79, ../_scss/_ucla-vars.scss */
body {
  font-size: 100%;
}

/*
@font-face {
	font-family: '../fonts/ProximaNova';src: url('../fonts/ProximaNova-Light.eot');src: url('../fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'),url('../fonts/ProximaNova-Light.woff') format('woff'),url('../fonts/ProximaNova-Light.ttf') format('truetype');
	font-weight: 300;
	font-style: normal;
}
*/
@font-face {
  font-family: '../fonts/ProximaNova';
  src: url("../fonts/ProximaNova-Regular.eot");
  src: url("../fonts/ProximaNova-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/ProximaNova-Regular.woff") format("woff"), url("../fonts/ProximaNova-Regular.ttf") format("truetype");
  font-weight: 400;
  font-style: normal;
}
/* line 5, ../_scss/_forms.scss */
input {
  width: 21em;
  font-size: 1.25em;
  margin-bottom: 1em;
  -moz-border-radius: 3px;
  -webkit-border-radius: 3px;
  border-radius: 3px;
}

/* line 12, ../_scss/_forms.scss */
select, input, textarea {
  padding: 0.5em 0.6em;
  display: inline-block;
  border: 1px solid #ccc;
  box-shadow: inset 0 1px 3px #dedede;
  border-radius: 3px;
}

/* line 20, ../_scss/_forms.scss */
select:focus, input:focus, textarea:focus {
  outline: 0;
  outline: thin dotted \9;
  /* IE6-9 */
  border-color: #00a5e5;
}

/* line 26, ../_scss/_forms.scss */
select[disabled], input[disabled] {
  cursor: not-allowed !important;
  background-color: #eaeded;
  color: #cad2d3;
}

/* line 32, ../_scss/_forms.scss */
input:focus:invalid,
select:focus:invalid {
  color: #b94a48;
  border-color: #ee5f5b;
}

/* line 38, ../_scss/_forms.scss */
input:focus:invalid:focus,
select:focus:invalid:focus {
  border-color: #e9322d;
}

/* line 43, ../_scss/_forms.scss */
select {
  border: 1px solid #ccc;
  background-color: #fff;
}

/* line 48, ../_scss/_forms.scss */
fieldset {
  margin: 0;
  padding: 0.5em 0;
  border: 0;
}

/* line 54, ../_scss/_forms.scss */
legend {
  display: block;
  width: 100%;
  padding: 0.5em 0;
  font-weight: normal;
  color: #347bad;
  font-size: 1.5em;
}

/* line 63, ../_scss/_forms.scss */
button, .button {
  display: inline-block;
  *display: inline;
  /*IE 6/7*/
  zoom: 1;
  line-height: normal;
  vertical-align: baseline;
  text-align: center;
  cursor: pointer;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-family: inherit;
  font-size: 100%;
  *font-size: 90%;
  /*IE 6/7 - To reduce IE's oversized button text*/
  *overflow: visible;
  /*IE 6/7 - Because of IE's overly large left/right padding on buttons */
  padding: 0.75em 1em;
  color: #444;
  /* rgba not supported (IE 8) */
  color: rgba(0, 0, 0, 0.8);
  /* rgba supported */
  *color: #444;
  /* IE 6 & 7 */
  border: 1px solid #999;
  /*IE 6/7/8*/
  border: none transparent;
  /*IE9 + everything else*/
  background-color: #E6E6E6;
  text-decoration: none;
  border-radius: 3px;
}

/* Firefox: Get rid of the inner focus border */
/* line 93, ../_scss/_forms.scss */
button::-moz-focus-inner {
  padding: 0;
  border: 0;
}

/* line 98, ../_scss/_forms.scss */
button:focus {
  outline: 0;
}

/* line 102, ../_scss/_forms.scss */
button:active {
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset, 0 0 6px rgba(0, 0, 0, 0.2) inset;
}
/* ... */

